# FolioWatch

./: .gitattributes  .gitignore  config.json  create_report.py  example.secret.json  pipeline.py  pyproject.toml  readme.md  requirements.txt  run.py  run_SA.py  run_schwab.py  scripts.py
APIs/: gmail.py  seeking_alpha.py  seekingalpha.py  yahoo.py
APIs/schwab/: authentication.py  schwab.py
compiled_tables/: analyst_ratings.csv  top_stocks.csv
helpers/: create_report.py  loaders.py  urls.json  urls.py
parsers/: parser.py  table_parser.py
reports/: example_report.html  report_plot_2022-07-22.html
template/: pdftemplate.jinja  template.html.jinja
